Resolve cryostat ID

--- a/python/duneggd/protodunevd/protodune_vd.cfg
+++ b/python/duneggd/protodunevd/protodune_vd.cfg
@@ -4,7 +4,7 @@ subbuilders = ["detenclosure"]
 material = "Air"
 FoamPadding = Q('80cm')
 AirThickness = Q('3000cm')
-DP_CRT_switch = False
+DP_CRT_switch = True
 HD_CRT_switch = False
 cathode_switch = True
 fieldcage_switch = True
@@ -42,6 +42,7 @@ class = steelsupport.SteelSupportBuilder
 
 [foam]
 class = foam.FoamBuilder
+subbuilders = ["cryostat"]
 
 [cryostat]
 class = cryostat.CryostatBuilder
