--- a/python/duneggd/protodunevd/protodune_vd.cfg
+++ b/python/duneggd/protodunevd/protodune_vd.cfg
@@ -1,6 +1,6 @@
 [world]
 class = world.WorldBuilder
-subbuilders = ["detenclosure"]
+subbuilders = ["volDetEnclosure"]
 material = "Air"
 FoamPadding = Q('80cm')
 AirThickness = Q('3000cm')
