--- a/python/duneggd/protodunevd/protodune_vd.cfg
+++ b/python/duneggd/protodunevd/protodune_vd.cfg
@@ -32,7 +32,7 @@ fieldcage_parameters = "{'FieldShaperInnerRadius': Q('1.758cm'), 'FieldShaperOut
 
 pmt_parameters = "{'pmt_TPB': [11,12,13,14,23,24], 'pmt_left_rotated': [11,12,13,14], 'pmt_right_rotated': [21,22,23,24], 'pmt_y_positions': [Q('405.3cm'), Q('170.0cm'), Q('0cm'), Q('-170.0cm'), Q('-405.3cm')], 'pmt_z_positions': [Q('306.0cm'), Q('204.0cm'), Q('-204.0cm'), Q('-306.0cm'), Q('68.1cm'), Q('0cm')], 'horizontal_pmt_pos_bot': Q('-301.7cm'), 'horizontal_pmt_pos_top': Q('-225.9cm'), 'horizontal_pmt_z': Q('256.9cm'), 'horizontal_pmt_y': Q('221.0cm'), 'pmt_offset': Q('35.0cm'), 'pmt_radius': Q('6.5*2.54cm'), 'pmt_height': Q('11.1*2.54cm') - Q('1.877*2.54cm'), 'pmt_coating_thickness': Q('0.2mm'), 'pmt_pos_x': Q('-367.6cm')}"
 
-[detenclosure]
+[volDetEnclosure]
 class = protodune.ProtoDUNEVDBuilder
 subbuilders = ["beamelements", "steelsupport", "foam", "cryostat",  "crt"]
 
